<resources>
    <string name="app_name" translatable="false">PexelsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text">Home</string>
    <string name="bookmark_text">Bookmark</string>
    <string name="search_text">Search</string>
    <string name="clear_icon_text">Clear Data</string>
    <string name="search_icon">Search Data</string>
    <string name="popular_request_item">Popular Request</string>
    <string name="curated_photo_item">Curated Photo</string>
    <string name="placeholder_path" translatable="false">M43.75,0H6.25C4.593,0.001 3.004,0.66 1.832,1.832C0.66,3.004 0.001,4.593 0,6.25V43.75C0.001,45.407 0.66,46.996 1.832,48.168C3.004,49.34 4.593,49.999 6.25,50H43.75C45.407,49.999 46.996,49.34 48.168,48.168C49.34,46.996 49.999,45.407 50,43.75V6.25C49.999,4.593 49.34,3.004 48.168,1.832C46.996,0.66 45.407,0.001 43.75,0ZM6.25,47.5C5.255,47.5 4.302,47.105 3.598,46.402C2.895,45.698 2.5,44.745 2.5,43.75V30.688L11.908,21.282C12.729,20.465 13.841,20.005 15,20.005C16.159,20.005 17.271,20.465 18.093,21.282L44.263,47.447C44.092,47.472 43.925,47.498 43.75,47.5H6.25ZM47.5,43.75C47.5,44.695 47.138,45.55 46.557,46.21L29.267,28.92L31.907,26.282C32.729,25.465 33.841,25.005 35,25.005C36.159,25.005 37.271,25.465 38.092,26.282L47.5,35.688V43.75ZM47.5,32.153L39.86,24.515C38.57,23.228 36.822,22.506 35,22.506C33.178,22.506 31.43,23.228 30.14,24.515L27.5,27.15L19.86,19.515C18.551,18.265 16.81,17.567 15,17.567C13.19,17.567 11.449,18.265 10.14,19.515L2.5,27.15V6.25C2.5,5.255 2.895,4.302 3.598,3.598C4.302,2.895 5.255,2.5 6.25,2.5H43.75C44.745,2.5 45.698,2.895 46.402,3.598C47.105,4.302 47.5,5.255 47.5,6.25V32.153Z</string>
    <string name="back_icon">Go to Home Fragment</string>
    <string name="right_internet_icon_path" translatable="false">M53.51,9.86C51.21,10.13 50.07,12.11 50.07,13.87C50.06,14.76 50.34,15.65 50.95,16.3C51.57,16.96 52.48,17.3 53.63,17.17L53.63,17.17L53.64,17.17C65.99,15.59 78.55,17.01 90.25,21.3C101.94,25.59 112.43,32.63 120.84,41.83L120.84,41.83C121.63,42.68 122.57,43.03 123.49,42.98C124.39,42.93 125.23,42.49 125.86,41.86C127.11,40.6 127.64,38.43 126.05,36.68L126.05,36.68C116.96,26.77 105.64,19.16 93.02,14.5C80.41,9.84 66.86,8.24 53.51,9.86ZM53.51,9.86C53.51,9.86 53.51,9.86 53.51,9.86C53.51,9.86 53.51,9.86 53.51,9.86ZM76.41,40.81V40.79C86.88,43.37 96.35,49.02 103.59,57.02L103.59,57.02C104.37,57.88 105.31,58.23 106.23,58.18C107.13,58.13 107.97,57.69 108.6,57.06C109.86,55.8 110.39,53.63 108.8,51.88L108.8,51.88C100.51,42.8 89.67,36.42 77.7,33.6L77.7,33.6C75.4,33.06 73.77,34.59 73.3,36.31C73.06,37.17 73.1,38.11 73.5,38.93C73.9,39.76 74.67,40.4 75.8,40.67L76.41,40.81Z</string>
    <string name="left_internet_icon_path" translatable="false">M18.97,51.99L18.97,51.99C17.4,53.75 17.92,55.93 19.16,57.19C19.78,57.83 20.62,58.26 21.52,58.31C22.43,58.36 23.36,58.01 24.14,57.14C30.84,49.7 39.47,44.25 49.07,41.4L62.99,55.32C58.51,55.45 54.09,56.44 49.97,58.25C45.49,60.21 41.47,63.09 38.17,66.7C36.59,68.44 37.14,70.61 38.39,71.86C39.03,72.48 39.87,72.92 40.77,72.97C41.69,73.02 42.62,72.66 43.4,71.8C46.86,67.97 51.32,65.18 56.27,63.75C61.19,62.32 66.4,62.29 71.33,63.64L108.12,100.43C108.46,100.77 108.86,101.04 109.31,101.22C109.76,101.4 110.23,101.5 110.71,101.5C111.2,101.5 111.67,101.4 112.12,101.22C112.57,101.04 112.97,100.77 113.31,100.43C113.65,100.08 113.92,99.68 114.11,99.23C114.29,98.79 114.39,98.31 114.39,97.83C114.39,97.35 114.29,96.87 114.11,96.42C113.92,95.98 113.65,95.57 113.31,95.23L19.65,1.58C18.96,0.89 18.03,0.5 17.06,0.5C16.08,0.5 15.15,0.89 14.46,1.58C13.77,2.26 13.39,3.2 13.39,4.17C13.39,5.14 13.77,6.08 14.46,6.77L25.97,18.28C16.83,22.93 8.62,29.24 1.77,36.87C1.4,37.19 1.09,37.59 0.88,38.03C0.65,38.48 0.53,38.97 0.5,39.48C0.48,39.98 0.56,40.48 0.74,40.95L1.21,40.78L0.74,40.95C0.92,41.43 1.2,41.85 1.55,42.21C1.91,42.57 2.33,42.85 2.8,43.04C3.27,43.23 3.77,43.32 4.27,43.3C4.78,43.28 5.27,43.16 5.73,42.95L5.51,42.5L5.73,42.95C6.18,42.73 6.58,42.43 6.92,42.05C13.82,34.4 22.15,28.19 31.45,23.75L43.33,35.63C33.99,38.99 25.62,44.61 18.97,51.99Z</string>
    <string name="selected_photo_scroll_view">Photo Scroll VIew</string>
    <string name="download_text">Download</string>
    <string name="download_button">Download Selected Photo</string>
    <string name="no_results_text">No result found</string>
    <string name="explore_text">Explore</string>
    <string name="no_internet_icon">No internet connection</string>
    <string name="no_internet_connection">Check your internet connection</string>
    <string name="no_image_text">No image found</string>
    <string name="saved_to_gallery">Image has been successfully saved</string>
    <string name="error_saving">Saving image error</string>
    <string name="image_path" translatable="false">\"image/jpeg\"</string>
    <string name="image_format" translatable="false">\".jpg\"</string>
    <string name="bookmark_button">Add photo to database</string>
    <string name="bookmarks_text">Bookmarks</string>
    <string name="no_saved_result">You haven\'t saved anything yet</string>
    <string name="bookmark_photo">Bookmark photo item</string>
    <string name="try_again">Try Again</string>
</resources>