<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    tools:context=".presentation.fragments.DetailsFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/back_icon_background"
        android:contentDescription="@string/back_icon"
        android:padding="@dimen/list_item_padding"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_image_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_image_text"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/no_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/no_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/explore_text"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_image_text_view"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/authors_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button"
        tools:text="Name Surname" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/progress_bar_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/progress_bar_margin"
        android:progressTint="?attr/colorPrimary"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/photo_card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/medium_margin"
        app:cardCornerRadius="@dimen/picture_corner_radius"
        app:layout_constraintBottom_toTopOf="@id/bottom_functional_buttons"
        app:layout_constraintTop_toBottomOf="@id/back_button">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/selected_photo_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/placeholder"
            android:scaleType="center" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/bottom_functional_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:background="?attr/colorOnBackground"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/download_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/download_section_background"
            android:padding="@dimen/bottom_section_elements_padding"
            android:paddingStart="@dimen/download_text_start_padding"
            android:paddingEnd="@dimen/download_text_end_padding"
            android:text="@string/download_text"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/download_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/download_button_background"
            android:contentDescription="@string/download_button"
            android:padding="@dimen/download_button_padding"
            android:src="@drawable/download_icon" />

        <ImageButton
            android:id="@+id/bookmark_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bookmark_background"
            android:contentDescription="@string/bookmark_button"
            android:padding="@dimen/bottom_section_elements_padding"
            android:src="@drawable/bookmark_details_inactive" />

        <ImageButton
            android:id="@+id/bookmark_button_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bookmark_background_active"
            android:contentDescription="@string/bookmark_text"
            android:padding="@dimen/bottom_section_elements_padding"
            android:src="@drawable/bookmark_details_active"
            android:visibility="gone" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/no_image_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="no_image_text_view,no_image_button" />
</androidx.constraintlayout.widget.ConstraintLayout>